--- a/style.css
+++ b/style.css
@@ -18,9 +18,14 @@ header {
 
 .header-image {
     position: absolute;
-    top: -20vh;
+    top: -33vh;
     z-index: -1;
     animation: blur 2s ease-out;
+}
+.header-image img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
 }
 
 @keyframes blur {
@@ -85,7 +90,7 @@ header {
     justify-content: flex-start;
     border-radius: 10px;
     background-color: white;
-    padding: 5px 0;
+    padding: 1px 0;
 }
 
 .search input {
@@ -138,7 +143,7 @@ header {
     position: relative;
     cursor: pointer;
     width: 500px;
-    height: 250px;
+    height: 271px;
     margin: 3px 5px;
     transition: all 0.2s;
     overflow: hidden;
@@ -170,15 +175,14 @@ header {
 
 .white {
     position: absolute;
-    bottom: 3px;
-    row-gap: 10px;
+    bottom: 1px;
     display: grid;
     align-items: center;
     border-radius: 0 0 15px 15px;
     background-color: white;
     width: 100%;
     max-width: 100%;
-    height: 75px;
+    height: 90px;
     z-index: 2;
 }
 
@@ -187,10 +191,10 @@ header {
     font-family: Okra, Helvetica, sans-serif;
     font-size: 20px;
     font-weight: 500;
-    text-indent: 10px;
+    text-indent: 20px;
     color: rgb(56, 56, 56);
     letter-spacing: 0.7px;
-    line-height: 32px;
+    line-height: 0px;
 }
 .white p:nth-child(2) {
     text-align: left;
@@ -199,8 +203,7 @@ header {
     font-weight: 400;
     color: #4f4f4f;
     letter-spacing: 0.7px;
-    line-height: 24px;
-    
+    text-indent: 20px;
 }
 
 .middle,
